startupchecker thread changed to timer demon custompreviewhandler doesnt spawn second update thread some findbugs suggestions